[gd_scene load_steps=52 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://weapons/raw_assets/machete.glb" type="PackedScene" id=5]
[ext_resource path="res://weapons/raw_assets/machinegun.glb" type="PackedScene" id=6]
[ext_resource path="res://weapons/raw_assets/shotgun.glb" type="PackedScene" id=7]
[ext_resource path="res://weapons/raw_assets/rocketlauncher.glb" type="PackedScene" id=8]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=9]
[ext_resource path="res://weapons/HitScanBulletEmitter.tscn" type="PackedScene" id=10]
[ext_resource path="res://effects/raw_assets/muzzleflash1.glb" type="PackedScene" id=11]
[ext_resource path="res://effects/MuzzleFlash.gd" type="Script" id=12]
[ext_resource path="res://effects/raw_assets/muzzleflash3.glb" type="PackedScene" id=13]
[ext_resource path="res://weapons/DamageArea.tscn" type="PackedScene" id=14]
[ext_resource path="res://effects/raw_assets/muzzleflash2.glb" type="PackedScene" id=15]
[ext_resource path="res://weapons/RocketSpawner.tscn" type="PackedScene" id=16]
[ext_resource path="res://weapons/crosshairs/crosshair065.png" type="Texture" id=17]
[ext_resource path="res://weapons/crosshairs/crosshair001.png" type="Texture" id=18]
[ext_resource path="res://weapons/crosshairs/crosshair026.png" type="Texture" id=19]
[ext_resource path="res://weapons/crosshairs/crosshair066.png" type="Texture" id=20]
[ext_resource path="res://characters/player/PickupManager.gd" type="Script" id=21]
[ext_resource path="res://ui/crypt_domino_1b.png" type="Texture" id=22]
[ext_resource path="res://ui/KleintenDynamicFont.tres" type="DynamicFont" id=23]
[ext_resource path="res://characters/player/StatsDisplay.gd" type="Script" id=24]
[ext_resource path="res://ui/KLEINTEN.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://characters/player/PickupInfo.gd" type="Script" id=26]
[ext_resource path="res://sfx/out_of_ammo.wav" type="AudioStream" id=27]
[ext_resource path="res://sfx/machine_gun_fire.wav" type="AudioStream" id=28]
[ext_resource path="res://sfx/rocket_launcher_fire.wav" type="AudioStream" id=29]
[ext_resource path="res://sfx/shotgun_fire.wav" type="AudioStream" id=30]
[ext_resource path="res://sfx/knife_fire.wav" type="AudioStream" id=31]
[ext_resource path="res://sfx/item_pickup.wav" type="AudioStream" id=32]
[ext_resource path="res://sfx/health_pickup.wav" type="AudioStream" id=33]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.0282511, 0.141364, 0 ), Vector3( -0.128626, 0.00784755, 0.0903494 ), Vector3( -0.114136, 0.00348425, 0.213123 ), Vector3( -0.0760905, 0.0347916, 0.0974743 ), Vector3( -0.0380452, 0.0909622, 0.065881 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 34.3301, -8.20809, -14.6394 ), Vector3( -32.6164, 105.887, -87.0781 ), Vector3( -28.7524, 142.694, -106.362 ), Vector3( -4.10607, 42.8985, -27.5328 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.0707918 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.169494 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -0.148454, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 18.821, 0, 0 ), Vector3( 90.575, 0, 0 ), Vector3( 90.575, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.0449856 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "moving"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.03, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=12]
radius = 13.0

[sub_resource type="SphereShape" id=13]
radius = 50.0

[sub_resource type="CapsuleShape" id=14]
radius = 0.67

[sub_resource type="Animation" id=15]
resource_name = "heal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0, 0.196078 ), Color( 0, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.886275, 0.12549, 0.0901961, 0.196078 ), Color( 0.886275, 0.12549, 0.0901961, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=18]
size = 24
font_data = ExtResource( 25 )

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
current = true

[node name="WeaponManager" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.117731, -0.369031 )
script = ExtResource( 4 )

[node name="Weapons" type="Spatial" parent="Camera/WeaponManager"]

[node name="Machete" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.170543, -0.0186682, 0.0931532 )
script = ExtResource( 9 )
weapon_type = 1
damage = 15
ammo = -1
attack_rate = 0.3

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0 )

[node name="machete" parent="Camera/WeaponManager/Weapons/Machete/Graphics" instance=ExtResource( 5 )]
transform = Transform( 0.17728, 0, 0, 0, 0.17728, 0, 0, 0, 0.17728, 0, -0.0291998, 0.0344409 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Machete"]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]

[node name="DamageArea" parent="Camera/WeaponManager/Weapons/Machete/BulletEmitters" instance=ExtResource( 14 )]
transform = Transform( 1.24293, 0, 0, 0, 1.24391, -7.83004e-08, 0, 6.35811e-08, 1.53189, -0.173112, 0.157346, -0.261179 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Machete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwingSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/Machete"]
stream = ExtResource( 31 )
bus = "sfx"

[node name="MachineGun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.117185, 0, 0.196641 )
visible = false
script = ExtResource( 9 )
is_automatic = true
ammo = 0
attack_rate = 0.1

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0707918 )

[node name="machinegun" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics" instance=ExtResource( 6 )]
transform = Transform( 0.155618, 0, 0, 0, 0.155618, 0, 0, 0, 0.155618, 0, 0, 0 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0514591, -0.266554 )
script = ExtResource( 12 )

[node name="muzzleflash1" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" instance=ExtResource( 11 )]
transform = Transform( -0.2, 0, -7.78829e-08, 0, 0.2, 0, 7.78829e-08, 0, -0.2, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0204456 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/MachineGun"]
autoplay = "idle"
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun"]

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/MachineGun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0510162, -0.269583 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/MachineGun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunshotSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/MachineGun"]
stream = ExtResource( 28 )
max_db = 1.0
bus = "sfx"

[node name="OutOfAmmoSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/MachineGun"]
stream = ExtResource( 27 )
bus = "sfx"

[node name="Shotgun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.124738, 0, 0.214692 )
visible = false
script = ExtResource( 9 )
damage = 10
ammo = 0
attack_rate = 0.8

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]
transform = Transform( 1, 0, 0, 0, 0.946531, -0.322613, 0, 0.322613, 0.946531, 0, 0, 0 )

[node name="shotgun" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics" instance=ExtResource( 7 )]
transform = Transform( 0.14432, 0, 0, 0, 0.14432, 0, 0, 0, 0.14432, 0, 0, 0 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0217637, -0.275255 )
script = ExtResource( 12 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00730672 )

[node name="muzzleflash3" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" instance=ExtResource( 13 )]
transform = Transform( -0.204251, 0, -6.65534e-08, 0, 0.204251, 0, 6.65534e-08, 0, -0.204251, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Shotgun"]
autoplay = "idle"
anims/attack = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0193615, -0.275971 )

[node name="HitScanBulletEmitter2" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 0.999048, 0.00190265, -0.0435779, 0, 0.999048, 0.0436194, 0.0436194, -0.0435779, 0.998097, 0, 0.0193615, -0.275971 )

[node name="HitScanBulletEmitter3" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 0.999048, 0.00190265, 0.0435779, 0, 0.999048, -0.0436194, -0.0436194, 0.0435779, 0.998097, 0, 0.0193615, -0.275971 )

[node name="HitScanBulletEmitter4" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 0.996195, -0.00304169, -0.0871027, 0, 0.999391, -0.0348995, 0.0871557, 0.0347667, 0.995588, 0, 0.0193615, -0.275971 )

[node name="HitScanBulletEmitter5" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 10 )]
transform = Transform( 0.996195, -0.00304169, 0.0871027, 0, 0.999391, 0.0348995, -0.0871557, -0.0347667, 0.995588, 0, 0.0193615, -0.275971 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunshotSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/Shotgun"]
stream = ExtResource( 30 )
max_db = 1.0
bus = "sfx"

[node name="OutOfAmmoSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/Shotgun"]
stream = ExtResource( 27 )
bus = "sfx"

[node name="RocketLauncher" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.118208, 0.0658211, 0.233113 )
visible = false
script = ExtResource( 9 )
damage = 30
ammo = 0

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0449856 )

[node name="rocketlauncher" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics" instance=ExtResource( 8 )]
transform = Transform( 0.109055, 0, 0, 0, 0.109055, 0, 0, 0, 0.109055, 0, 0, 0 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0594592, -0.202592 )
script = ExtResource( 12 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00931564 )

[node name="muzzleflash2" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash" instance=ExtResource( 15 )]
transform = Transform( 0.123494, 0, 0, 0, -0.123494, 1.07962e-08, 0, -1.07962e-08, -0.123494, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
autoplay = "idle"
anims/attack = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher"]

[node name="RocketSpawner" parent="Camera/WeaponManager/Weapons/RocketLauncher/BulletEmitters" instance=ExtResource( 16 )]

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketFireSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
stream = ExtResource( 29 )
max_db = 1.0
bus = "sfx"

[node name="OutOfAmmoSound" type="AudioStreamPlayer3D" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
stream = ExtResource( 27 )
bus = "sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager"]
autoplay = "idle"
anims/idle = SubResource( 10 )
anims/moving = SubResource( 11 )

[node name="AlertAreaHearing" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaHearing"]
shape = SubResource( 12 )

[node name="AlertAreaLineOfSight" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaLineOfSight"]
shape = SubResource( 13 )

[node name="FirePoint" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.114032 )

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]

[node name="HealthManager" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="PickupManager" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 21 )

[node name="CollisionShape" type="CollisionShape" parent="PickupManager"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 14 )

[node name="ItemPickedUpSound" type="AudioStreamPlayer" parent="PickupManager"]
stream = ExtResource( 32 )
bus = "sfx"

[node name="HealthPickedUpSound" type="AudioStreamPlayer3D" parent="PickupManager"]
stream = ExtResource( 33 )
bus = "sfx"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartMessage" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -18.0
margin_right = 138.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 23 )
text = "Press 'R' to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RestartMessage"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -23.0
margin_right = 143.0
margin_bottom = 23.0
texture = ExtResource( 22 )
stretch_mode = 2

[node name="StatsDisplay" type="Label" parent="CanvasLayer"]
margin_left = 22.1607
margin_top = 23.327
margin_right = 164.161
margin_bottom = 98.327
custom_fonts/font = ExtResource( 23 )
text = "Health: 0
Ammo: 0"
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthEffects" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.886275, 0.12549, 0.0901961, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HealthEffects"]
autoplay = "start"
anims/heal = SubResource( 15 )
anims/hurt = SubResource( 16 )
anims/start = SubResource( 17 )

[node name="PickupInfo" type="Label" parent="CanvasLayer"]
margin_left = 23.0
margin_top = 108.0
margin_right = 303.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 18 )
text = "Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun"
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveInfoTimer" type="Timer" parent="CanvasLayer/PickupInfo"]
wait_time = 2.0
[connection signal="ammo_changed" from="Camera/WeaponManager" to="CanvasLayer/StatsDisplay" method="update_ammo"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Machete" to="Camera/WeaponManager/Weapons/Machete/SwingSound" method="play"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" method="flash"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/GunshotSound" method="play"]
[connection signal="out_of_ammo" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/OutOfAmmoSound" method="play"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Shotgun" to="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" method="flash"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Shotgun" to="Camera/WeaponManager/Weapons/Shotgun/GunshotSound" method="play"]
[connection signal="out_of_ammo" from="Camera/WeaponManager/Weapons/Shotgun" to="Camera/WeaponManager/Weapons/Shotgun/OutOfAmmoSound" method="play"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/RocketLauncher" to="Camera/WeaponManager/Weapons/RocketLauncher/RocketFireSound" method="play"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/RocketLauncher" to="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash" method="flash"]
[connection signal="out_of_ammo" from="Camera/WeaponManager/Weapons/RocketLauncher" to="Camera/WeaponManager/Weapons/RocketLauncher/OutOfAmmoSound" method="play"]
[connection signal="dead" from="HealthManager" to="Camera/WeaponManager" method="disable_all_weapons"]
[connection signal="dead" from="HealthManager" to="CanvasLayer/RestartMessage" method="show"]
[connection signal="healed" from="HealthManager" to="CanvasLayer/HealthEffects/AnimationPlayer" method="play" binds= [ "heal" ]]
[connection signal="health_changed" from="HealthManager" to="CanvasLayer/StatsDisplay" method="update_health"]
[connection signal="hurt" from="HealthManager" to="CanvasLayer/HealthEffects/AnimationPlayer" method="play" binds= [ "hurt" ]]
[connection signal="got_pickup" from="PickupManager" to="CanvasLayer/PickupInfo" method="add_pickups_info"]
[connection signal="timeout" from="CanvasLayer/PickupInfo/RemoveInfoTimer" to="CanvasLayer/PickupInfo" method="remove_pickups_info"]
